ProdIND/ProdPrograms/force-app/main/default/objects/Mahindra_Application_Status__c/Mahindra_Application_Status__c.object-meta.xml
<CustomObject>
    <label>Mahindra Application Status</label>
    <nameField>
        <label>Mahindra Application Status Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mahindra Application Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>