ProdIND/ProdPrograms/force-app/main/default/objects/Mahindra_Application_Status__c/fields/Enquiry_Id__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Id__c</fullName>
    <label>Enquiry Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>