ProdIND/ProdPrograms/force-app/main/default/objects/Mahindra_Application_Status__c/fields/Reverse_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Lead_Source__c</fullName>
    <label>Reverse Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital-Mahindra-Custom</fullName>
            </value>
            <value>
                <fullName>Digital-Mahindra-PreA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>